// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<span
  class="TabFocusTrap"
  tabindex="-1"
>
  TabFocusTrap
</span>
`;

exports[`renders the component with an additional class name 1`] = `
<span
  class="TabFocusTrap my-extra-class"
  tabindex="-1"
>
  TabFocusTrap
</span>
`;
